добавлен функционал приглашения участников на страницу приложения

--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ VITE_GRAPHQL_URI=https://app.stud.druid.1t.ru/graphql
 VITE_GRAPHQL_URI_WS=wss://app.stud.druid.1t.ru/graphql
 VITE_SPACE=1790
 
-VITE_PAGE_TEAM_ID = 
+VITE_GROUP_TYPE_ID=4635011659461901615
+VITE_ID_PAGE_MODULE=5480463224687122401
+VITE_ID_PAGE_TASKS=2610861721613343284
